test/spec_vectors/simd_load/fail/module_19.wat
(module (memory 1) (func (local v128) (v128.load (i32.const 0))))